fix: prevent unnecessary horizontal scrollbar
- move scrollbars into PdfViewer component
- export useSize and useSafeRef hooks to be used in tooling structure view

--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
@@ -8,6 +8,8 @@
   // Take up entire width, but do not expand beyond it
   width: 100%;
   max-width: 100%;
+
+  overflow: auto;
 }
 
 .#{$prefix}--document-preview-pdf-viewer__wrapper {
